final style edits

--- a/src/assets/stylesheets/style.css
+++ b/src/assets/stylesheets/style.css
@@ -101,7 +101,7 @@ button.modal-confirm {
 button.modal-cancel {
   background-color: transparent;
   border: 0;
-  color: #1DC6D8;
+  color: #4C7DE0;
   font-weight: 600;
   margin-right: 16px;
 }
